--- a/template/signin.html
+++ b/template/signin.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sign in</title>
-    meta
   </head>
-  <body>
+  <body align='center'>
     <h3>Sign in Page</h3>
     <form action="/signin" method="POST">
-      {{ form.hidden_tag()  }}
-      {{ form.email }}
-      {{ form.password }}
-      {{ form.submit }}
+      {{ form.hidden_tag() }}
+      <div style="padding: 6px;">{{ form.email }}</div>
+      <div style="padding: 6px;">{{ form.password }}</div>
+      <div style="padding: 6px;"> {{ form.submit }}</div>
     </form>
-    <div>
-      Don't have an account ? <button type="button"><a href="/signup"><b>SIGN UP</b></a></button>
+    <div style="padding: 8px;">
+      Don't have an account ? <button type="button"><a href="/signup"><strong>SIGN UP</strong></a></button>
     </div>
   </body>
 </html>
