--- a/template/home.html
+++ b/template/home.html
@@ -3,9 +3,8 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title></title>
-    meta
   </head>
-  <body>
+  <body style="align-center">
     <h2>Authentication System</h2>
     <div>
       <button type="button"><a href="/signin"><b>Sign In</b></a></button>
